2016-06-30  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSICUString.m: Re-implement the function to let ICU access
	the contents of an NSString.  The original version looks like it was
	broken for cases where an algorithm is moving backwards in the string
	(reverse search and regular expression parsing).
	I hope the new implementation is correct (or at least clearer); the
	ICU documentation is minimal and I didn't find any reference/example
	implementations to work from.

2016-06-28  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSDebug.m: Yse setjmp/longjmp from NSException.h
	* Headers/Foundation/NSException.h: On mingw-w64 use the builtin
	setjmp/longjmp provided by gcc since the mingw version sometimes
	crashes.

2016-06-28  Richard Frith-Macdonald <rfm@gnu.org>

	* SSL: Openssl bundle directory deleted
	* GNUmakefile: Don't build openssl bundle
	* Source/NSFileHandle.m: Don't load openssl bundle
	* configure.ac: remove option to build bundle
	* configure: regenerate
	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/install.texi:
	* Documentation/news.texi:
	* Documentation/readme.texi:
	Updates to note that the obsolete openssl bundle has been removed.

2016-06-26  Richard Frith-Macdonald <rfm@gnu.org>

        * Headers/Foundation/NSTask.h:
        * Source/NSTask.m:
        * Tests/base/NSTask/general.m:
        * Tests/base/NSTask/notify.m:
	Add -terminationReason method from OSX10.5

2016-06-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMessagePort.m:
	* config/config.reuseaddr.c:
	Hack to work around Hurd local domain socket bug.
	Plus don't try to set SO_REUSEADDR on local domain sockets anyway.

2016-06-25  Richard Frith-Macdonald <rfm@gnu.org>

	* Documentation/Base.gsdoc:
	* Documentation/ReleaseNotes.gsdoc:
	* Documentation/news.texi:
	* Source/Makefile.postamble:
	* Source/NSBundle.m:
	* Source/NSPathUtilities.m:
	* Source/NSTask.m:
	* Source/NSThread.m:
	* configure:
	* configure.ac: